--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo 'No tests for now.' && exit 1"
   },
+  "devDependencies": {
+    "node-dir": "~0.1.10",
+    "jsonfile": "~2.2.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mrshu/tosdr-topic-suggester.git"
